# Horizon_old

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
Horizon/: horizon.py
Horizon/DMS_examples_MX/: free_fall.py  free_fall_dt.py  free_fall_final_time.py  sqp_example.py  sqp_example2.py  sqp_example_horizon.py  sqp_example_horizon2.py  swing_dt.py  swing_final_time.py  test.py
Horizon/DMS_examples_SX/: centauro_jump_dt.py  centauro_mpc_balancing.py  centauro_wall_dt.py  free_fall.py  free_fall_dt.py  rope_climbing.py  rope_gap_crossing.py  rope_jump_dt.py  rope_jump_dt2.py  rope_vertical_jump_dt.py  rope_walking.py  rope_walking2.py  swing.py  template_rope.py
Horizon/constraints/: contact.py  final_time.py  initial_condition.py  position.py  torque_limits.py
Horizon/solvers/: __init__.py  ilqr.py  nilqr.py  sqp.py
Horizon/utils/: dt_RKF.py  footsteps_scheduler.py  integrator.py  inverse_dynamics.py  kinematics.py  normalize_quaternion.py  replay_trajectory.py  resample_integrator.py
configs/urdf/: roped_template.urdf  walking_roped_template.urdf
examples/: CMakeLists.txt
examples/launch/: inv_pendulum_ilqr.launch
examples/notebook/: car_obstacles.ipynb  car_obstacles.py  car_obstacles_horizon.py  casadi_test.py  constr_ilqr_test.py  derivative_computation_test.py  derivative_test.py  inv_pendulum.ipynb  inv_pendulum.py
examples/urdf/: inv_pendulum.urdf
launch/: centauro_jump.launch  centauro_jump_dt.rviz  centauro_visualizer.rviz  centauro_wall.launch  climbing_rope_robot.launch  gap_rope_robot.launch  rope_robot.launch  template_slider.launch  visualizer.rviz  walking_rope_robot.launch
matlab_plot/: centauro_mpc_plot.m
python/: constraints.py  horizon.py  inverse_dynamics.py  multiple_shooting_example.py  multiple_shooting_example_free_fall.py  previewer.py  replay_trajectory.py  resample_integrator.py
python/DMS_examples_MX/: free_fall.py  free_fall_dt.py  free_fall_dt_sqp.py  free_fall_final_time.py  sqp_example.py  sqp_example2.py  sqp_example_horizon.py  swing.py  swing_dt.py  swing_final_time.py  template_rope.py
python/DMS_examples_SX/: centauro_jump_dt.py  centauro_mpc_balancing.py  centauro_wall_dt.py  free_fall.py  free_fall_dt.py  free_fall_final_time.py  rope_climbing.py  rope_gap_crossing.py  rope_jump_dt.py  rope_jump_dt2.py  rope_vertical_jump_dt.py  rope_walking.py  rope_walking2.py  swing.py  swing_dt.py  swing_dt_logs.py  swing_final_time.py  template_rope.py
python/constraints/: __init__.py  contact.py  contact_force.py  final_time.py  initial_condition.py  position.py  torque_limits.py
(+53 files in other folders)
